[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -28,3 +28,7 @@ body {
      font-size: 200%;
      color: green;
     }
+    script{
+        font-family: cursive;
+        font-size: 200%;
+    }
