[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -33,7 +33,7 @@ h2{
   .hobby{
       text-align: center;
      font-family: bold;
-      
+     color: green; 
   }  
     .college{
        text-align: center;
