--- a/ui/style.css
+++ b/ui/style.css
@@ -39,6 +39,9 @@ h2{
        text-align: center;
      font-family: bold;
   }
+ .vijay{
+     font-size: 100;
+ }
  button{
      text-transform: uppercase;
      font-size: 200%;
