--- a/ui/style.css
+++ b/ui/style.css
@@ -40,17 +40,18 @@ h2{
      font-family: bold;
   }
  .vijay{
-    
-color: blue;
+    color: blue;
  }
 .image{
     text-align: center;
 }
 
 .man{
-    width : 200px;
+    width : 500px;
     font-size: 100%;
     text-align: left;
+    margin-bottom: 90px;
+    
 }
 
 
