--- a/ui/style.css
+++ b/ui/style.css
@@ -47,10 +47,11 @@ h2{
 }
 
 .vijay1{
-    width : 500px;
-    font-size: 100%;
-    text-align: left;
-    margin-bottom: 100px;
+    text-transform: uppercase;
+     font-size: 100%;
+     width: 500px;
+     right: 100px;
+     color: orange;
     
 }
 
