[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -47,11 +47,11 @@ h2{
 }
 
 .vijay1{
-   
+    text-align: center;
     text-transform: uppercase;
      font-size: 100%;
      width: 500px;
-     right: 1000px;
+     
      color: orange;
     
 }
