--- a/ui/style.css
+++ b/ui/style.css
@@ -45,14 +45,21 @@ h2{
 .image{
     text-align: center;
 }
-
+.vijay2{
+    color: black;
+    text-align: center;
+    text-transform: uppercase;
+     font-size: 100%;
+     width: 500px;
+     
+}
 .vijay1{
     text-align: center;
     text-transform: uppercase;
      font-size: 100%;
      width: 500px;
      
-     color: orange;
+     color: purple;
     }
 
  button{
