--- a/ui/style.css
+++ b/ui/style.css
@@ -46,12 +46,12 @@ h2{
     text-align: center;
 }
 .vijay2{
-    color: black;
+    color: darkorange;
     text-align: center;
     text-transform: uppercase;
      font-size: 100%;
      width: 500px;
-     
+     font-family: bold;
 }
 .vijay1{
     text-align: center;
@@ -59,7 +59,7 @@ h2{
      font-size: 100%;
      width: 500px;
      
-     color: purple;
+     color: red;
     }
 
  button{
