[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -72,6 +72,7 @@ onclick{
      font-size: 100%;
      width: 300px;
      color: green;
+   background: brown;
     }   
  script{
         font-family: bold;
