--- a/ui/style.css
+++ b/ui/style.css
@@ -20,7 +20,7 @@ body {
     height: 200px;
 }
  h1{
-      text-align: center;
+     text-align: center;
      font-size: 200%;
  }
   
@@ -50,7 +50,7 @@ h2{
      text-transform: uppercase;
      font-size: 100%;
      width: 500px;
-     color: black;
-     background:lightblue;
+     color:darkgreen;
+     background:black;
      font-family: bold;  
       }   
