[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -51,6 +51,6 @@ h2{
      font-size: 100%;
      width: 500px;
      color:darkgreen;
-     background:black;
+     background:white;
      font-family: bold;  
       }   
