--- a/ui/style.css
+++ b/ui/style.css
@@ -43,7 +43,10 @@ h2{
 .image{
     text-align: center;
 }
-
+a{
+    font-family: bold;
+    color: green;
+}
  button{
      margin: 100 auto;
      text-align: center;
