--- a/ui/style.css
+++ b/ui/style.css
@@ -52,8 +52,8 @@ a{
      text-align: center;
      text-transform: uppercase;
      font-size: 100%;
-     width: 500px;
+     width: 1000px;
      color:darkgreen;
      background:white;
      font-family: bold;  
-    padding: 50px, 50px;  }   
+      }   
