[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -57,3 +57,8 @@ a{
      background:white;
      font-family: bold;  
     height: 50px;  }   
+.btn3{
+    font-size:50%;
+    color: lightblue;
+    
+}
