--- a/ui/style.css
+++ b/ui/style.css
@@ -57,8 +57,8 @@ a{
      background:white;
      font-family: bold;  
     height: 50px;  }   
-#btn3{
+#btn3 {
     font-size:50%;
-    color: lightblue;
-    
+    color: black;
+    background: lightblue;
 }
