--- a/ui/style.css
+++ b/ui/style.css
@@ -58,9 +58,9 @@ a{
      font-family: bold;  
     height: 50px;  }   
 #btn3 {
-    font-size:50%;
+    font-size:60%;
     color: black;
     background: lightblue;
-   width: 50px;
-    
+   width: 60px;
+   height:20px; 
 }
