[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -53,7 +53,7 @@ a{
      text-transform: uppercase;
      font-size: 150%;
      width: 1200px;
-     color:darkgreen;
+     color:black;
      background:brown;
      font-family: bold;  
     height: 50px;  }   
