--- a/ui/style.css
+++ b/ui/style.css
@@ -54,7 +54,7 @@ a{
      font-size: 150%;
      width: 1200px;
      color:black;
-     background:brown;
+     background: orange;
      font-family: bold;  
     height: 50px;  }   
 #btn3 {
