[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -2,6 +2,8 @@ body {
     font-family: sans-serif;
     background-color:blue;
     margin-top: 75px;
+display:block;margin:0 auto;
+    
 }
 
 .center {
