--- a/ui/style.css
+++ b/ui/style.css
@@ -49,7 +49,7 @@ a{
     font-family: bold;
     color:red;
  }
- button{
+ .vj3{
      margin: 100 auto;
      text-align: center;
      text-transform: uppercase;
