[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -49,7 +49,7 @@ a{
     font-family: bold;
     color:red;
  }
- .vj3{
+ .vijay1{
      margin: 100 auto;
      text-align: center;
      text-transform: uppercase;
