[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -59,8 +59,8 @@ a{
      background: orange;
      font-family: bold;  
     height: 50px;  }   
-.vj2 {
-     margin: 0 auto;
+.w3-center {
+     margin: 50 auto;
      text-align: center;
     font-size:80%;
     color: black;
