[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -61,7 +61,7 @@ h2{
     height: 50px;  }   
  
  .w3-center {
-    margin: 500 auto;
+    margin-right: 500px;
     text-align: center;
     font-size:80%;
     
