--- a/ui/style.css
+++ b/ui/style.css
@@ -67,6 +67,9 @@ h2{
     color: lightblue;
     width: 60px;
     height:20px;
+  
+     margin-right: 30%;
+      margin-left: 30%;
  }
  input{
      font-family: bold;
