--- a/ui/style.css
+++ b/ui/style.css
@@ -66,7 +66,7 @@ h2{
     
     text-align: center;
     font-size:80%;
-    
+    background:lightblue;
     width: 40%;
     height:20px;
   color : lightblue;
