[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -35,12 +35,12 @@ h2{
   .hobby{
       text-align: center;
       font-family: bold;
-      
+      color:red ;
   }  
  .college{
      text-align: center;
      font-family: bold;
-  }
+ color:red; }
  
  .image{
     text-align: center;
