--- a/ui/style.css
+++ b/ui/style.css
@@ -83,6 +83,12 @@ h2{
     color:lightblue;
 }
  .hide{
-     width: 100px;
+     width: 50px;
  }
- 
+ .show{
+      color:black;
+     background: orange;
+     font-family: bold;
+ text-align: center;
+  width: 100px;
+ }
