--- a/ui/style.css
+++ b/ui/style.css
@@ -85,11 +85,17 @@ h2{
  .hide{
      width: 50px;
     color:orange;
+ 
+     height: 50px;
  }
  .show{
-      color:black;
+     color:black;
      background: orange;
      font-family: bold;
- text-align: center;
-  width: 500px;
+   text-align: center;
+   width: 1000px;
+   margin: 100 auto;
+     height: 50px;
+  text-transform: uppercase;
+     font-size: 150%;
  }
