--- a/ui/style.css
+++ b/ui/style.css
@@ -85,7 +85,8 @@ h2{
  .hide{
      width: 50px;
     color:orange;
- 
+  text-transform: uppercase;
+     font-size: 150%;
      height: 50px;
  }
  .show{
