--- a/ui/style.css
+++ b/ui/style.css
@@ -83,23 +83,28 @@ h2{
     color:lightblue;
 }
  .hide{
-      margin: 0 auto;
-     width: 50px;
+     margin: 0 auto;
+     max-width: 50px;
      color:orange;
      text-transform: uppercase;
      font-size: 150%;
      height: 50px;
- }
+     padding-left:20px;
+     padding-right:20px;
+     }
  .show{
      color:black;
      background: orange;
      font-family: bold;
      text-align: center;
-     width: 1000px;
+     margin: 0 auto;
+     max-width: 1000px;
      margin: 100 auto;
      height: 50px;
      text-transform: uppercase;
      font-size: 150%;
+     padding-left:20px;
+     padding-right:20px;
  }
  textarea{
      width: 250px;
