--- a/ui/style.css
+++ b/ui/style.css
@@ -104,7 +104,8 @@ h2{
      height: 50px;
      text-transform: uppercase;
      font-size: 150%;
-    
+     padding-left:20px;
+     padding-right:20px;
  }
  textarea{
      width: 250px;
