--- a/ui/style.css
+++ b/ui/style.css
@@ -90,7 +90,8 @@ h2{
      text-transform: uppercase;
      font-size: 150%;
      height: 50px;
-   
+    margin-right: 30%;
+    margin-left: 30%;
      }
  .show{
      color:black;
@@ -99,13 +100,13 @@ h2{
      text-align: center;
      margin: 0 auto;
      width:1000px;
-     max-width: 1000px;
+     margin-right: 30%;
+    margin-left: 30%;
      
      height: 50px;
      text-transform: uppercase;
      font-size: 150%;
-     padding-left:20px;
-     padding-right:20px;
+    
  }
  textarea{
      width: 250px;
