--- a/ui/style.css
+++ b/ui/style.css
@@ -90,7 +90,8 @@ h2{
      text-transform: uppercase;
      font-size: 150%;
      height: 50px;
-   
+      margin-right: 30%;
+      margin-left: 30%;
      }
  .show{
      color:black;
@@ -100,7 +101,7 @@ h2{
      margin: 0 auto;
      width:500px;
      margin-right: 30%;
-    margin-left: 30%;
+     margin-left: 30%;
      
      height: 50px;
      text-transform: uppercase;
