--- a/ui/style.css
+++ b/ui/style.css
@@ -69,6 +69,21 @@ h2{
 #can{
     color:lightblue;
 }
+ 
+ 
+ a { color:black;
+     background: orange;
+     font-family: bold;
+     text-align: center;
+     
+     width:600px;
+     
+     
+     height:35px;
+     text-transform: uppercase;
+     font-size: 150%;
+     
+ }
  .hide{
     
     
@@ -79,7 +94,7 @@ h2{
      height: 35px;
     
      }
- .show-a{
+ .show{
      color:black;
      background: orange;
      font-family: bold;
