--- a/ui/style.css
+++ b/ui/style.css
@@ -45,7 +45,17 @@ h2{
  .image{
     text-align: center;
 }
- 
+ .vijay1{
+     color:black;
+     background: orange;
+     font-family: bold;
+     text-align: center;
+     width:600px;
+     height:30px;
+     text-transform: uppercase;
+     font-size: 145%;
+     
+ }
      
  
  
@@ -70,27 +80,19 @@ h2{
     color:lightblue;
 }
  
- 
- 
- .hide{
-    
-    
+  .hide{
      width:50px;
      color:orange;
      text-transform: uppercase;
      font-size: 150%;
      height: 35px;
-    
-     }
+    }
  .show{
      color:black;
      background: orange;
      font-family: bold;
      text-align: center;
-     
      width:600px;
-     
-     
      height:35px;
      text-transform: uppercase;
      font-size: 150%;
